Some stetic changes

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,7 @@
 //
 // Bootstrap framework + Theme
 //
-$primary: #673ab8 !default;
+$primary: #292929 !default;
 $body-bg: #673ab80a !default;
 @import "bootstrap/scss/bootstrap";
 
