--- a/src/App.scss
+++ b/src/App.scss
@@ -34,3 +34,18 @@ body {
   height: 100%;
   align-items: center;
 }
+
+.card-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.card-wrapper {
+  flex: 1;
+  min-width: 300px; /* O ajusta el ancho según tus necesidades */
+}
+
+.card {
+  height: 100%;
+}
