--- a/src/App.scss
+++ b/src/App.scss
@@ -4,6 +4,8 @@
 $primary: #292929 !default;
 $body-bg: #590aea0a !default;
 @import "bootstrap/scss/bootstrap";
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
+
 
 //
 // Custom styles
@@ -18,9 +20,11 @@ $body-bg: #590aea0a !default;
   font-size: 24px;
   font-weight: bold;
   margin-left: 1%;
+  font-family: 'Inter', sans-serif;
 }
 
 .justify-content-end{
+  
   margin-right: 1%;
 }
 
@@ -28,9 +32,82 @@ body {
   color: white;
   min-height: 100vh;
   background-color: black;
+  font-family: 'Inter', sans-serif;
 }
 
-.fila{
-  height: 100%;
+.home-page {
+  height: calc(100vh - 75px);
+  overflow: hidden;
+  position: relative;
   align-items: center;
+}
+
+.left-col::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 50%;
+  height: 100%;
+  background: linear-gradient(to right, rgba(0, 0, 0, 0.93) 40%, rgba(0, 0, 0, 0));
+}
+
+.custom-section.text {
+  position: relative;
+  z-index: 1;
+  text-align: center;
+  font-family: 'Inter', sans-serif;
+}
+
+.custom-section h1{
+  font-size: 36px;
+  font-weight: bold;
+}
+
+.custom-section p{
+  font-size: 18px;
+}
+
+.custom-section h2{
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.custom-button{
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.custom-section img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+#login{
+  font-family: 'Inter', sans-serif;
+}
+
+#login h1{
+  text-align: center;
+  margin-bottom: 100px;
+  margin-top: 100px;
+  font-size: 36px;
+  font-weight: bold;
+}
+
+#login form{
+  font-weight: bold;
+  font-size: 18px;
+}
+
+#login .check{
+  font-size: 18px;
+  font-weight: normal;
+}
+
+#login button{
+  font-weight: bold;
+  font-size: 18px;
+  margin-top: 3%;
 }
