--- a/src/App.scss
+++ b/src/App.scss
@@ -107,7 +107,17 @@ body {
     button {
       font-weight: bold;
       font-size: 18px;
-      margin-top: 3%;
     }
+  }
+}
+
+#profile {
+  font-family: 'Inter', sans-serif;
+
+  h1{
+    margin-bottom: 50px;
+    margin-top: 100px;
+    font-size: 36px;
+    font-weight: bold;
   }
 }
