--- a/src/App.scss
+++ b/src/App.scss
@@ -139,3 +139,31 @@ body {
 .card {
   height: 100%;
 }
+
+.users{
+  font-family: 'Inter', sans-serif;
+  h2{
+    text-align: center;
+    margin-bottom: 3%;
+    margin-top: 2%;
+    font-size: 36px;
+    font-weight: bold;
+  }
+
+  button{
+    font-size: 18px;
+    margin-top: -2px;
+    font-weight: bold;
+  }
+
+  .buscador{
+    text-align: center;
+    margin-left: 30%;
+  }
+
+  p{
+    text-align: center;
+    margin-right: 29%;
+    font-size: 18px;
+  }
+}
