--- a/src/App.scss
+++ b/src/App.scss
@@ -81,6 +81,7 @@ body {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  margin-left: 1%;
 }
 
 #login, #register {
@@ -165,56 +166,6 @@ body {
     margin-right: 29%;
     font-size: 18px;
   }
-}
-
-.footer {
-  background-color: #292929;
-  color: white;
-  padding: 15px;
-  text-align: center;
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-}
-
-.footer-content {
-  display: flex;
-  justify-content: space-between; // Mueve los elementos a los lados
-  align-items: center; // Centra verticalmente los elementos
-  max-width: 1200px;
-  margin: 0 auto;
-}
-
-.footer-links {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-  font-family: 'Inter', sans-serif;
-  font-size: 18px;
-}
-
-.footer-links li {
-  display: inline;
-  margin-right: 10px; 
-}
-
-.footer-links li a {
-  color: white;
-  text-decoration: none;
-}
-
-.footer-links li a:hover {
-  text-decoration: underline;
-}
-
-.footer p{
-  font-family: 'Inter', sans-serif;
-  font-weight: bold;
-  font-size: 18px;
-}
-
-svg{
-  margin-right: 10px;
 }
 
 #barbershops{
